<resources>

    <string name="app_name">幻影相机</string>
    <string name="shared_pref_name">huanyingxiangji</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_pic">拍照</string>
    <string name="main_group">相片组</string>
    <string name="groupName">组名</string>
    <string name="CreateGroup">创建新组</string>
    <string name="deleteGroup">删除组</string>
    <string name="generateGif">生成GIF</string>
    <string name="combinate_h">水平合成</string>
    <string name="combinate_v">垂直合成</string>
    <string name="add_new_pic">添加新图片</string>
    <string name="picture">拍摄</string>
    <string name="title">幻影相机</string>
    <string name="works">作品集</string>
    <string name="toast_no_camera">一个摄像头都没有，真心没得玩，要不换个手机吧？</string>
    <string name="toast_load_meng_failed">蒙图片找不到了</string>
    <string name="open_meng">打开蒙</string>
    <string name="select_meng">选择蒙</string>
    <string name="save_path">保存路径</string>
    <string name="switch_camera">切换相机</string>
    <string name="faild_select_meng">选择蒙图片时失败，请换个图片选择器</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="new_group_load_pic_err">加载图片错误，请重新选择</string>
    <string name="reconnect_error">无法打开相机，检测到被其他应用使用</string>
    <string name="group_add_new_error">添加新图片出错</string>
    <string name="group_create_error">创建新组出错</string>
    <string name="new_group_empty">请点击上面按钮选择至少一个图片</string>
    <string name="new_group_empty_name">请填写组名</string>
    <string name="share">分享</string>


</resources>
